--- a/build.properties
+++ b/build.properties
@@ -5,4 +5,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                splash.bmp,\
-               Jama-1.0.3.jar
+               Jama-1.0.3.jar,\
+               about.mappings,\
+               plugin.properties
