Fixed the view to not be movable nor closable.

--- a/plugin.xml
+++ b/plugin.xml
@@ -32,6 +32,8 @@
       <perspectiveExtension
             targetID="*">
          <view
+               moveable="false"
+               closeable="false"
                standalone="true"
                minimized="false"
                relative="org.eclipse.ui.editorss"
