Added help to build.properties and made it deploy as a directory.
Added Eclipse-BundleShape: dir to MANIFEST.MF.

--- a/build.properties
+++ b/build.properties
@@ -7,4 +7,5 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                Jama-1.0.3.jar,\
                about.mappings,\
-               plugin.properties
+               plugin.properties,\
+               help/
