Changed the logic for keystrokes and added more keystrokes.
Implemented Right, Left, Up, and Down.
Added plugin_customization.ini to build.

--- a/build.properties
+++ b/build.properties
@@ -8,4 +8,5 @@ bin.includes = plugin.xml,\
                Jama-1.0.3.jar,\
                about.mappings,\
                plugin.properties,\
-               help/
+               help/,\
+               plugin_customization.ini
